<resources>

    <string name="app_name">ZarDriver</string>

    <string name="userName">نام کاربری</string>
    <string name="password">رمز ورود</string>
    <string name="forgetPassword">رمز خود را فراموش کرده اید؟</string>
    <string name="logoContentDescription">لوگوی برنامه</string>
    <string name="loginToAccount">ورود به حساب کاربری</string>
    <string name="bePatient">شکیبا باشید …</string>
    <string name="appIsRunning">سرویس زر در حال اجرا است</string>
    <string name="dataReceivedIsEmpty">اطلاعات دریافت شده خالی است</string>
    <string name="dismiss">بستن</string>
    <string name="userNameValidationFailed">نام کاربری را صحیح وارد نمایید</string>
    <string name="passwordValidationFailed">رمز ورود را وارد نمایید</string>
    <string name="location">موقعیت مکانی</string>
    <string name="gps">GPS</string>
    <string name="internet">internet</string>
    <string name="home">home</string>
    <string name="p_internet">اینترنت</string>
    <string name="errorLocationIsOff">موقیعت مکانی دستگاه خود را روشن کنید</string>
    <string name="errorInternetIsOff">اینترنت دستگاه خود را چک کنید</string>
    <string name="driverInfoIsEmpty">اطلاعات راننده دریافت نشد</string>
    <string name="tripInfoIsEmpty">اطلاعات سفر دریافت نشد</string>
    <string name="internalMemoryIsFull">حافظه دستگاه شما پر شده است</string>
    <string name="doYouWantToUpdateApp">آیا برای بروزرسانی برنامه مطمئن هستید؟</string>
    <string name="tryAgain">تلاش دوباره</string>
    <string name="pleaseCheckYouConnection">لطفا اینترنت دستگاه خود را چک کنید</string>

    <string name="startDriving">شروع سفر</string>
    <string name="stopDriving">پایان سفر</string>
    <string name="waitingDriving">منتظر باشید…</string>
    <string name="reconnectDriving">در حال اتصال…</string>


</resources>