<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.zarholding.zardriver.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollViewLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textInputLayoutPasscode"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintWidth_percent="0.7"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxCornerRadiusTopStart="@dimen/_5sdp"
                app:boxStrokeColor="@color/pageBack"
                app:hintTextColor="@color/pageBack"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:fontFamily="@font/vazir_medium"
                    android:gravity="start|center_vertical"
                    android:hint="@string/userName"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textColor="@color/pageBack"
                    android:singleLine="true"
                    android:text="@={viewModel.userName}"
                    android:textSize="@dimen/_10sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPasscode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/textInputLayoutUserName"
                app:layout_constraintStart_toStartOf="@id/textInputLayoutUserName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                app:boxCornerRadiusTopStart="@dimen/_5sdp"
                app:passwordToggleEnabled="true"
                android:layoutDirection="rtl"
                app:boxStrokeColor="@color/pageBack"
                app:hintTextColor="@color/pageBack"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/vazir_medium"
                    android:gravity="start|center_vertical"
                    android:hint="@string/password"
                    android:inputType="numberPassword"
                    android:maxLength="20"
                    android:textColor="@color/pageBack"
                    android:singleLine="true"
                    android:text="@={viewModel.passcode}"
                    android:textSize="@dimen/_10sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPasscode"
                app:layout_constraintStart_toStartOf="@id/textInputLayoutPasscode"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_margin="@dimen/_2sdp"
                android:text="@string/forgetPassword"
                android:fontFamily="@font/vazir_bold"
                android:visibility="gone"/>

            <ImageView
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textInputLayoutUserName"
                android:layout_marginBottom="@dimen/_20sdp"
                android:contentDescription="@string/logoContentDescription"
                android:src="@drawable/solid_white"
                app:tint="@color/buttonLoading" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/textInputLayoutUserName"
                app:layout_constraintEnd_toEndOf="@id/textInputLayoutUserName"
                app:layout_constraintTop_toBottomOf="@id/forgetPassword"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_12sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:fontFamily="@font/vazir_normal"
                app:cornerRadius="@dimen/_5sdp"
                android:textColor="@color/white"
                android:text='@{viewModel.loadingLiveDate ? @string/bePatient : @string/loginToAccount}'
                app:showProgress="@{viewModel.loadingLiveDate}"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>
